# hyperdog_ros2

./: .gitignore  README.md
.github/: FUNDING.yml
hyperdog_ctrl/: package.xml  setup.cfg  setup.py
hyperdog_ctrl/IK/: InverseKinematics.py  controlVariables.py  inverse_kinematic_node.py  test.ipynb
hyperdog_ctrl/IK/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hyperdog_ctrl/IK/log/: latest_build
hyperdog_ctrl/body_motion_planner/: body_motion_planner.py  test.ipynb
hyperdog_ctrl/cmd_manager/: cmd_manager_node.py  hyperdog_variables.py  main.py  test.ipynb
hyperdog_ctrl/gait_generator/: gait_planner.py  test.ipynb
hyperdog_gazebo_joint_cmd/: package.xml  setup.cfg  setup.py
hyperdog_gazebo_joint_cmd/hyperdog_gazebo_joint_cmd/: hyperdog_gazebo_joint_controller.py
hyperdog_gazebo_sim/: CMakeLists.txt  README.md  package.xml
hyperdog_gazebo_sim/config/: hyperdog_joint_controller.yaml
hyperdog_gazebo_sim/description/: consts.xacro  gazebo_ros2_control_plugin.xacro  hyperdog.urdf.xacro  hyperdog_gazebo.xacro  hyperdog_urdf_joints.xacro  hyperdog_urdf_links.xacro  physics.xacro  physics_include.xacro
hyperdog_gazebo_sim/launch/: hyperdog_gazebo_sim.launch.py  hyperdog_gazebo_sim_allPkgs.launch.py
hyperdog_gazebo_sim/meshes/: LEFT_ULEG.stl  LLEG.stl  RIGHT_ULEG.stl
hyperdog_gazebo_sim/meshes/mm_scaled/: LLEG.dae  LLEG.stl
hyperdog_gazebo_sim/src/: fake_odom.cpp  hyperdog_gazebo_joint_controller.cpp
hyperdog_gazebo_sim/worlds/: contact.world  test_world.world
hyperdog_ign_sim/: CMakeLists.txt  README.md  package.xml
hyperdog_ign_sim/config/: hyperdog_joint_controller.yaml
hyperdog_ign_sim/ign/: gui.config
hyperdog_ign_sim/launch/: hyperdog_ign.launch.py
hyperdog_ign_sim/models/hyperdog/: model.config  model.sdf
hyperdog_ign_sim/models/hyperdog/meshes/: LEFT_HIP.stl  RIGHT_HIP.stl  body.stl
hyperdog_ign_sim/src/: hyperdog_ign_sim.cpp
hyperdog_ign_sim/worlds/: empty_world.sdf
hyperdog_ign_sim/xacros/: gazebo_ros2_control_plugin.xacro  hyperdog.urdf.xacro  hyperdog_gazebo.xacro  hyperdog_urdf_joints.xacro  hyperdog_urdf_links.xacro  physics.xacro  physics_include.xacro
hyperdog_launch/: package.xml  setup.cfg  setup.py
hyperdog_launch/launch/: hyperdog.launch.py
hyperdog_msgs/: CMakeLists.txt  package.xml
hyperdog_msgs/msg/: Geometry.msg  JoyCtrlCmds.msg  Limits.msg
hyperdog_teleop/: CMakeLists.txt  package.xml
hyperdog_teleop/launch/: hyperdog_teleop.launch.py
hyperdog_teleop/src/: hyperdog_definitions.hpp  hyperdog_teleop_joy.cpp
