<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hyperdog_gazebo_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nipun.dhananjaya@gmail.com">nd94</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>hyperdog_msgs</build_depend>
  <exec_depend>hyperdog_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>hyperdog_msgs</depend>
    <depend>nav_msgs</depend>
  </export>
</package>
