<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hyperdog_ign_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nipun.dhananjaya@gmail.com">nd94</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_ign_gazebo</depend>

  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>ros_ign_gazebo</depend>
  </export>
</package>
