<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hyperdog_ign_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nipun.dhananjaya@gmail.com">nd94</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>ign_ros2_control</build_depend> -->


  <depend>ros_ign_gazebo</depend>

  <exec_depend>ros_ign_bridge</exec_depend>
  <!-- <exec_depend>ros2_ign_gazebo</exec_depend> -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <!-- <exec_depend>ign_ros2_control</exec_depend> -->
  <!-- <exec_depend>hardware_interface</exec_depend> -->
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>ros_ign_gazebo</depend>
  </export>
</package>
